# FirefoxSocialsBlocker

./: .gitignore  background.js  blocker.py  manifest.json  pyproject.toml  rules.js
