[tool.poetry]
name = "socialsblocker"
version = "0.1.0"
description = ""
authors = ["NI-R0 <niklasrodenbusch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12.7"
mitmproxy = "^11.1.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
